# cpp-algorithm-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  codealike.json  docker-compose.yml  openapi.yaml
.github/prompts/: analyze-jd-and-plan-project.prompt.md  generate-explore-codebase-plan.prompt.md  generate-interview-talking-points.prompt.md  generate-new-hire-explore-guide.prompt.md
.github/workflows/: ci.yml
adminer/: Dockerfile
adminer/plugins-enabled/: 01-login-password-less.php
db/: schema.sql
docs/: algorithm-validation-engine-plan.md  debugging-guide.md  interview-talking-points.md  new-hire-guide.md
include/algorithms/: KalmanFilter.h  LeastSquares.h
include/api/: Router.h
include/db/: Repository.h
public/: index.html
src/: main.cpp
src/algorithms/: KalmanFilter.cpp  LeastSquares.cpp
src/api/: Router.cpp
src/db/: Repository.cpp
test/: kalman_test.cpp  leastsq_test.cpp
